syntax = "proto3";

package dumper;

// The DumperService service definition.
service FileService {
    rpc SaveDumpFile(SaveDumpFileRequest) returns (SaveDumpFileResponse) {}
}

message SaveDumpFileRequest {
    string token = 1;
    string targetname = 2;
    string filename = 3;
    bytes data = 4;

}

message SaveDumpFileResponse {
    bool success = 1;
}